force-app/main/default/objects/Callsheet_Section_Mapping__mdt/Callsheet_Section_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Callsheet Section Mapping</label>
    <pluralLabel>Callsheet Section Mappings</pluralLabel>
</CustomObject>