force-app/main/default/objects/Callsheet_Section_Mapping__mdt/fields/Callsheet_Section_Header__c.field-meta.xml
<CustomField>
    <fullName>Callsheet_Section_Header__c</fullName>
    <label>Callsheet Section Header</label>
    <referenceTo>Callsheet_Section_Header__mdt</referenceTo>
    <relationshipLabel>Callsheet Section Mappings</relationshipLabel>
    <relationshipName>Callsheet_Section_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>