force-app/main/default/objects/Callsheet_Section_Mapping__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>