force-app/main/default/objects/Callsheet_Section_Mapping__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>contains</fullName>
                <default>true</default>
                <label>contains</label>
            </value>
            <value>
                <fullName>equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>